# -computer-system-architecture

./: .gitignore  README.md
homework/: CMakeLists.txt  run_all_tests.sh
homework/hw1/: README.md
homework/hw1/code/: CMakeLists.txt  cartoon.cpp  cartoon.h  constants.h  container.cpp  container.h  documentary.cpp  documentary.h  game_movie.cpp  game_movie.h  main.cpp  movie.cpp  movie.h  o1.txt  o2.txt  rnd.h
homework/hw1/demo/: CMakeLists.txt  container.cpp  container.h  main.cpp  shape.cpp  shape.h
homework/hw1/tests/: README.md  out01_2.txt  out02_2.txt  out03_2.txt  out04_1.txt  out05_1.txt  outrand01_1.txt  outrand01_2.txt  outrand02_1.txt  outrand02_2.txt  test01.txt  test02.txt  test03.txt  test04.txt  test05.txt
homework/hw2/: README.md
homework/hw2/code/: CMakeLists.txt  cartoon.cpp  cartoon.h  constants.h  container.cpp  container.h  documentary.cpp  documentary.h  game_movie.cpp  game_movie.h  main.cpp  movie.cpp  movie.h  rnd.h
homework/hw2/tests/: README.md  out01_1.txt  out02_1.txt  out03_1.txt  out04_1.txt  out04_2.txt  out05_2.txt  outrand01_1.txt  outrand01_2.txt  test01.txt  test05.txt
homework/hw3/: README.md
homework/hw4/: README.md
homework/hw5/: README.md
homework/hw5/code/: CMakeLists.txt  main.cpp
homework/hw5/code/conveyer/: conveyer.cpp  conveyer.h  synchronized_queue.cpp  synchronized_queue.h
homework/hw5/code/people/: controller.cpp  controller.h  evaluator.cpp  evaluator.h  grinder.cpp  grinder.h
homework/hw5/code/pin/: pin.cpp  pin.h
homework/hw5/code/synchronized_logger/: logger.cpp  logger.h
(+74 files in other folders)
